<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:letterSpacing="0.2"
        android:text="@string/daysBtn"
        android:textColor="#C8C8C8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMinutes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMinutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        android:letterSpacing="0.2"
        android:text="@string/minutesBtn"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/btnDays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_rounded_corners"
        android:fontFamily="sans-serif-condensed-medium"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/select_date"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMinutes" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/selected_date"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        android:letterSpacing="0.2"
        app:layout_constraintBottom_toTopOf="@+id/tvSelectedDate"
        app:layout_constraintEnd_toEndOf="@+id/btnDatePicker"
        app:layout_constraintStart_toStartOf="@+id/btnDatePicker"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePicker" />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSecondTextSwap"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextContrastCheck"
        tools:text="2019.29.98" />

    <TextView
        android:id="@+id/tvSecondTextSwap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/age_in_minutes"
        android:textColor="?attr/colorOnSecondary"
        android:letterSpacing="0.2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvSelectedDateInMinutes"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectedDate" />

    <TextView
        android:id="@+id/tvSelectedDateInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/tvSecondTextSwap"
        app:layout_constraintStart_toStartOf="@+id/tvSecondTextSwap"
        app:layout_constraintTop_toBottomOf="@+id/tvSecondTextSwap"
        tools:ignore="TextContrastCheck"
        tools:text="20192998" />


</androidx.constraintlayout.widget.ConstraintLayout>